--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
       </div>
     </section>
 
+    <div class = center>
+        <button type="button" name="" value="" class="css3button">Calcular</button> 
+    </div>
+
     <!-- Footer -->
     <footer id = footer class="py-5">
       <div class="container">
