--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>One Page Wonder - Start Bootstrap Template</title>
+    <title>MeetTime</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -48,7 +48,7 @@
       <div class="masthead-content">
         <div class="container">
           <h1 class="masthead-heading mb-0">Faça o que gosta</h1>
-          <h2 class="masthead-subheading mb-0">de forma saudavel</h2>
+          <h2 class="masthead-subheading mb-0">de forma saudável</h2>
           <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Começar</a>
         </div>
       </div>
