--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
           <h1 class="masthead-heading mb-0">Faça o que gosta</h1>
 
-          <h2 class="masthead-subheading mb-0">de forma saudavel</h2>
+          <h2 class="masthead-subheading mb-0">de forma saudável</h2>
           <a href="#inicio" class="btn btn-primary btn-xl rounded-pill mt-5">Começar</a>
         </div>
       </div>
