--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 
               <h2 id = inst class="display-4">Instagran</h2>
               <p> 
-                  <label for="appt">Informe o tempo gasto por dia no Instagran:</label>
-                <input type="time" id="appt" name="appt"
+                  <label for="">Informe o tempo gasto por dia no Instagran:</label>
+                <input type="time" id="insTime" name=""
                        min="0:00" max="24:00" required>
                  <span class="note">informe o valor entre 0:00 a 24:00</span>
               </p>
@@ -100,9 +100,9 @@
             <div class="p-5">
               <h2 id = "zap" class="display-4">Whatsapp</h2>
               <p> 
-                  <label for="appt">Informe o tempo gasto por dia no Whatsapp:</label>
+                  <label for="">Informe o tempo gasto por dia no Whatsapp:</label>
 
-                <input type="time" id="appt" name="appt"
+                <input type="time" id="wApp" name=""
                        min="0:00" max="24:00" required>
                  <span class="note">informe o valor entre 0:00 a 24:00</span>
               </p>
@@ -124,9 +124,9 @@
             <div class="p-5">
               <h2 id = "face" class="display-4">Facebook</h2>
               <p>
-                  <label for="appt">Informe o tempo gasto por dia no Facebook:</label>
+                  <label for="">Informe o tempo gasto por dia no Facebook:</label>
 
-                <input type="time" id="appt" name="appt"
+                <input type="time" id="fbTime" name=""
 
                        min="0:00" max="24:00" required>
                  <span class="note">informe o valor entre 0:00 a 24:00</span>
@@ -137,8 +137,71 @@
       </div>
     </section>
 
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <div class="p-5">
+              <img class="img-fluid rounded-circle" src="img/08.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="p-5">
+              <h2 id = "youtube" class="display-4">YouTube</h2>
+              <p> 
+                  <label for="">Informe o tempo gasto por dia no YouTube:</label>
 
+                <input type="time" id="youTime" name=""
+                       min="0:00" max="24:00" required>
+                 <span class="note">informe o valor entre 0:00 a 24:00</span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <img class="img-fluid rounded-circle" src="img/07.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+              <h2 id = "twitter" class="display-4">Twitter</h2>
+              <p>
+                  <label for="">Informe o tempo gasto por dia no Twitter:</label>
+
+                <input type="time" id="twTime" name=""
+
+                       min="0:00" max="24:00" required>
+                 <span class="note">informe o valor entre 0:00 a 24:00</span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container"></div>
+        <div class="row align-items-center">
+          <div id="ou" >
+            <div class="p-5">
+              <h2 class="display-4">Outras Redes Sociais</h2>
+              <p>
+                <input type="time" id="outras" name=""
+                       min="0:00" max="24:00">
+                 <span class="note">informe o valor entre 0:00 a 24:00</span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <div class = center>
         <button type="button" id="btnconfir" name="" value="" class="css3button" onclick="myFunction()">Calcular</button> 
