--- a/moderado.html
+++ b/moderado.html
@@ -57,6 +57,20 @@
     </header>
 
     <section>
+        <div class="container"></div>
+        <div class="row align-items-center">
+          <div id="">
+            <div class="p-5">
+              <h2 class="display-4">Tempo gasto diariamente nas redes sociais:</h2>
+              <p onload=print.soma()> 
+              </p>
+            </div>
+          </div>
+        </div>
+        </div>
+      </section>
+
+    <section>
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
