--- a/moderado.html
+++ b/moderado.html
@@ -62,8 +62,18 @@
           <div id="">
             <div class="p-5">
               <h2 class="display-4">Tempo gasto diariamente nas redes sociais:</h2>
-              <p onload=print.soma()> 
-              </p>
+            </div>
+          </div>
+        </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container"></div>
+        <div class="row align-items-center">
+          <div id="">
+            <div class="p-5">
+              <h2 class="display-4">Tempo total gasto nas redes sociais:</h2>
             </div>
           </div>
         </div>
