--- a/nao-dependente.html
+++ b/nao-dependente.html
@@ -57,6 +57,30 @@
     </header>
 
     <section>
+      <div class="container"></div>
+      <div class="row align-items-center">
+        <div id="">
+          <div class="p-5">
+            <h2 class="display-4">Tempo gasto diariamente nas redes sociais:</h2>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container"></div>
+      <div class="row align-items-center">
+        <div id="">
+          <div class="p-5">
+            <h2 class="display-4">Tempo total gasto nas redes sociais:</h2>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
+
+    <section>
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
