--- a/muito-dependente.html
+++ b/muito-dependente.html
@@ -3,120 +3,127 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>One Page Wonder - Start Bootstrap Template</title>
+    <title>One Page Wonder - Start Bootstrap Template</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+    <!-- Custom fonts for this template -->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="css/one-page-wonder.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="css/one-page-wonder.min.css" rel="stylesheet">
 
 </head>
 
-<body>
+<body onload="carregaDadosDiarios()">
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-black navbar-custom fixed-top">
-    <div class="container">
-      <a id = tit class="navbar-brand" href="#">MeetTime</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-black navbar-custom fixed-top">
+        <div class="container">
+            <a id=t it class="navbar-brand" href="#">MeetTime</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#"></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <header class="masthead text-center text-white">
-    <div class="masthead-content">
-      <div class="container">
-        <h2 class="masthead-subheading mb-0">Muito Dependente</h2>
-      </div>
-    </div>
-    <div class="bg-circle-1 bg-circle"></div>
-    <div class="bg-circle-2 bg-circle"></div>
-    <div class="bg-circle-3 bg-circle"></div>
-    <div class="bg-circle-4 bg-circle"></div>
-  </header>
-
-  <section>
-    <div class="container"></div>
-    <div class="row align-items-center">
-      <div id="">
-        <div class="p-5">
-          <h2 class="display-4">Tempo gasto diariamente nas redes sociais:</h2>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
-    </div>
-    </div>
-  </section>
+    </nav>
 
-  <section>
-    <div class="container"></div>
-    <div class="row align-items-center">
-      <div id="">
-        <div class="p-5">
-          <h2 class="display-4">Tempo total gasto nas redes sociais:</h2>
+    <header class="masthead text-center text-white">
+        <div class="masthead-content">
+            <div class="container">
+                <h2 class="masthead-subheading mb-0">Muito Dependente</h2>
+            </div>
         </div>
-      </div>
-    </div>
-    </div>
-  </section>
+        <div class="bg-circle-1 bg-circle"></div>
+        <div class="bg-circle-2 bg-circle"></div>
+        <div class="bg-circle-3 bg-circle"></div>
+        <div class="bg-circle-4 bg-circle"></div>
+    </header>
 
-  <section>
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6 order-lg-2">
-          <div class="p-5">
-            <img class="img-fluid rounded-circle" src="img/04.png" alt="">
-          </div>
+    <section>
+        <div class="container"></div>
+        <div class="row align-items-center">
+            <div id="">
+                <div class="p-5">
+                    <h2 class="display-4">Tempo gasto diariamente nas redes sociais:</h2>
+                    <ul class="list-group" id="lista">
+
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-6 order-lg-1">
-          <div class="p-5">
-            <h2 class="display-4">Dicas:</h2>
-            <ul>
-              <li>Desativar alertas sonoros</li>
-              <li>Monitorar o tempo de uso</li>
-              <li>Dormir sem o celular</li>
-              </ul>
-            <p>
-              <label for="name">Dica saudável:</label>
-              Substitua o tempo em que ficará fora das redes socias por outras atividades que sejam prazerosas também, como ler, encontrar amigos, retomar um "hobby" antigo, praticar atividades físicas, etc. 
-            </p>
-          </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Footer -->
-  <footer id = footer class="py-5">
-    <div class="container">
-      <p class="m-0 text-center text-balck small">Copyright &copy; MeetTime 2019</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+    <section>
+        <div class="container"></div>
+        <div class="row align-items-center">
+            <div id="">
+                <div class="p-5">
+                    <h2 class="display-4">Tempo total gasto nas redes sociais:</h2>
+                    <ul class="list-group" id="lista-total">
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5">
+                        <img class="img-fluid rounded-circle" src="img/04.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Dicas:</h2>
+                        <ul>
+                            <li>Desativar alertas sonoros</li>
+                            <li>Monitorar o tempo de uso</li>
+                            <li>Dormir sem o celular</li>
+                        </ul>
+                        <p>
+                            <label for="name">Dica saudável:</label> Substitua o tempo em que ficará fora das redes socias por outras atividades que sejam prazerosas também, como ler, encontrar amigos, retomar um "hobby" antigo, praticar atividades físicas,
+                            etc.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer id=f ooter class="py-5">
+        <div class="container">
+            <p class="m-0 text-center text-balck small">Copyright &copy; MeetTime 2019</p>
+        </div>
+        <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="js/mainJs.js"></script>
 
 </body>
 
