--- a/nao-dependente.html
+++ b/nao-dependente.html
@@ -1,7 +1,7 @@
-  <!DOCTYPE html>
-  <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
-  <head>
+<head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,98 +20,105 @@
     <!-- Custom styles for this template -->
     <link href="css/one-page-wonder.min.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body>
+<body onload="carregaDadosDiarios()">
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-black navbar-custom fixed-top">
-      <div class="container">
-        <a id = tit class="navbar-brand" href="#">MeetTime</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container">
+            <a id=t it class="navbar-brand" href="#">MeetTime</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#"></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"></a>
-            </li>
-          </ul>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
 
     <header class="masthead text-center text-white">
-      <div class="masthead-content">
-        <div class="container">
-          <h2 class="masthead-subheading mb-0">Não Dependente</h2>
+        <div class="masthead-content">
+            <div class="container">
+                <h2 class="masthead-subheading mb-0">Não Dependente</h2>
+            </div>
         </div>
-      </div>
-      <div class="bg-circle-1 bg-circle"></div>
-      <div class="bg-circle-2 bg-circle"></div>
-      <div class="bg-circle-3 bg-circle"></div>
-      <div class="bg-circle-4 bg-circle"></div>
+        <div class="bg-circle-1 bg-circle"></div>
+        <div class="bg-circle-2 bg-circle"></div>
+        <div class="bg-circle-3 bg-circle"></div>
+        <div class="bg-circle-4 bg-circle"></div>
     </header>
 
     <section>
-      <div class="container"></div>
-      <div class="row align-items-center">
-        <div id="">
-          <div class="p-5">
-            <h2 class="display-4">Tempo gasto diariamente nas redes sociais:</h2>
-          </div>
-        </div>
-      </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="container"></div>
-      <div class="row align-items-center">
-        <div id="">
-          <div class="p-5">
-            <h2 class="display-4">Tempo total gasto nas redes sociais:</h2>
-          </div>
-        </div>
-      </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="container">
+        <div class="container"></div>
         <div class="row align-items-center">
-          <div class="col-lg-6 order-lg-2">
-            <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/06.png" alt="">
+            <div id="">
+                <div class="p-5">
+                    <h2 class="display-4">Tempo gasto diariamente nas redes sociais:</h2>
+                    <ul class="list-group" id="lista">
+
+                    </ul>
+                </div>
             </div>
-          </div>
-          <div class="col-lg-6 order-lg-1">
-            <div class="p-5">
-              <h2 class="display-4">PARABÉNS:</h2>
-              <p>
-                Você já sabe usar as redes socias de maneira inteligente e saudável.
-              </p>
-            </div>
-          </div>
         </div>
-      </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container"></div>
+        <div class="row align-items-center">
+            <div id="">
+                <div class="p-5">
+                    <h2 class="display-4">Tempo total gasto nas redes sociais:</h2>
+                    <ul class="list-group" id="lista-total">
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5">
+                        <img class="img-fluid rounded-circle" src="img/06.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">PARABÉNS:</h2>
+                        <p>
+                            Você já sabe usar as redes socias de maneira inteligente e saudável.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
-    <footer id = footer class="py-5">
-      <div class="container">
-        <p class="m-0 text-center text-balck small">Copyright &copy; MeetTime 2019</p>
-      </div>
-      <!-- /.container -->
+    <footer id=f ooter class="py-5">
+        <div class="container">
+            <p class="m-0 text-center text-balck small">Copyright &copy; MeetTime 2019</p>
+        </div>
+        <!-- /.container -->
     </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="js/mainJs.js"></script>
 
-  </body>
+</body>
 
-  </html>
+</html>
