--- a/moderado.html
+++ b/moderado.html
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-black navbar-custom fixed-top">
         <div class="container">
-            <a id=t it class="navbar-brand" href="#">MeetTime</a>
+            <a id=tit class="navbar-brand" href="index.html">Voltar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
